Corrections to bio

--- a/app/views/faq/_aboutus.html.haml
+++ b/app/views/faq/_aboutus.html.haml
@@ -12,14 +12,14 @@
           .accordion-inner
             %p
               A graduate of Anderson School of Management UCLA, Abhinav first 
-              realized the the need for gradians.com while grading papers for his 
-              statistics  professor. It occurred to him that if this was something 
-              teachers had to do themselves, they could not do it very often.
+              realized the need for gradians.com while grading papers for his 
+              statistics professor. It occurred to him that if the teachers  
+              had to do this themselves, they could not do it very often.
               This was the genesis of the idea.
             %p
               Prior to this Abhinav was a software engineer in the semiconductor
               industry. From a young age he has cultured an avid interest in
-              Computer Programming and has an inveterate curiousity in how 
+              Computer Programming and an inveterate curiousity in how 
               systems work.
             %p
               He is also good at racquet sports.
@@ -32,13 +32,13 @@
             %p
               A graduate of NYU's Courant Institute of Mathematical Science,
               Akshay has been involved with Gradians.com from its inception. 
-              He worked in the Financial Services industry for over eight years
-              before joining Abhinav and brings an appreciation for technology 
-              driven analysis and data management.
+              He worked in the Financial Services industry for several years
+              before joining Abhinav and brings with him an appreciation for 
+              technology driven analysis and data management.
             %p
-              Coupled with this, his technical expertise in the area of 
-              distributed IT systems has helped to give shape to the Gradians 
-              platform.
+              While in graduate school he worked in the New York City public
+              school system as part of an NYU initiative which sent students to
+              High Schools to help as Teaching Assistants.
             %p
               He shares Abhinav's passion for elegant Software systems 
               and also for sports.
