Incorporated new form YAML
The new YAML is more intuitive ad therefore easier to edit / modify.
Anyone reading it should be able to figure out exactly what sequence
of actions will result when a certain link is clicked

The aim is to write the least possible HAML and the most possible YAML.
The YAML parser is now smarter and sets some data-* attributes on its own
( such as data-no-touch | data-toggle )

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -43,7 +43,7 @@
           .row-fluid.jumbotron
             %p.span8.offset1= "Teach more. Help more. Grade less."
             .span2
-              = simple_button :for => "Register", :id => 'btn-register', :class => 'btn-primary btn-large'
+              = simple_link :for => "Register", :id => 'btn-register', :class => 'btn-primary btn-large'
           #how-it-works.carousel.slide
             .carousel-inner
               .item.active 
