--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -46,9 +46,9 @@
                 %li
                   = simple_link :for => "Inbox", :id => 'lnk-st-inbox'
                 %li.dropdown
-                  = simple_link :for => "Upload", :id => 'lnk-upload', :href => '#m-upload-what'
+                  = simple_link :for => "Upload", :id => 'lnk-upload'
                 %li.dropdown
-                  = simple_link :for => "Enroll", :id => 'lnk-enroll-self', :href => '#m-enroll-self'
+                  = simple_link :for => "Enroll", :id => 'lnk-enroll-self'
                 %li#cp-account-link.dropdown
                   = simple_link :for => "Hello, #{student.first_name}", :as => :dropdown, :id => 'm-account'
       #desktop.row-fluid
