--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -104,13 +104,13 @@
                 %li.dropdown
                   = simple_link :for => "Report Cards", :id => 'm-report-cards'
                 %li.dropdown
-                  = simple_link :for => "Upload", :id => 'lnk-upload', :href => '#m-upload-what'
+                  = simple_link :for => "Upload", :id => 'lnk-upload'
                 %li.dropdown
                   = simple_link :for => "Groups", :id => 'm-tc-sektions'
                 %li.dropdown
                   = simple_link :for => "Help", :id => 'm-howto'
                 %li.dropdown
-                  = simple_link :for => "QuickTrial", :id => 'lnk-demo', :href => '#m-demo'
+                  = simple_link :for => "QuickTrial", :id => 'lnk-demo'
                 %li#cp-account-link.dropdown
                   = simple_link :for => "Hello, #{tc.first_name}", :id => 'm-account'
       #desktop.row-fluid
