--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -1,35 +1,16 @@
 
 %ul.dropdown-menu.dropdown-inverse#howto-guides{ :role => :menu }
   %li
-    = simple_link :for => "Make a Quiz", :id => 'help-make-a-quiz', 
-      :class => 'help-launcher', :launch => 'qzb-milestone-1',
-      :autoclick => 'lnk-existing-quiz', :icon => 'icon-plus-sign'
+    = simple_link :for => "Make a Quiz", :id => 'help-make-a-quiz', :icon => 'icon-plus-sign'
   %li
-    = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
-      :class => 'help-launcher', :launch => 'wsb-milestone-1',
-      :autoclick => 'lnk-existing-quiz', :icon => 'icon-plus-sign'
+    = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', :icon => 'icon-plus-sign'
   %li
-    = simple_link :for => "Edit an existing quiz", :id => 'help-edit-quiz',
-      :class => 'help-launcher', :launch => 'editqz-milestone-1',
-      :autoclick => 'lnk-existing-quiz', :icon => 'icon-edit'
+    = simple_link :for => "Edit an existing quiz", :id => 'help-edit-qz', :icon => 'icon-edit'
   %li
-    = simple_link :for => "Publish a worksheet", :id => 'help-publish-ws',
-      :class => 'help-launcher', :launch => 'publish-milestone-1',
-      :autoclick => 'lnk-existing-quiz', :icon => 'icon-share'
+    = simple_link :for => "Publish a worksheet", :id => 'help-publish-ws', :icon => 'icon-share'
   %li
-    = simple_link :for => "Create a new Group", :id => 'help-mng-sektion',
-      :class => 'help-launcher', :launch => 'mng-sektions-milestone-1', :icon => 'icon-plus-sign'
+    = simple_link :for => "Create a new Group", :id => 'help-mng-sektions', :icon => 'icon-plus-sign'
   %li.divider
   %li
     = simple_link :for => "Ask a question", :icon => 'icon-question-sign', 
       :id => 'lnk-ask-a-question'
--#
-  %li
-    = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
-      :class => 'help-launcher', :launch => 'tutorial-make-a-ws'
-  %li
-    = simple_link :for => "Make - and publish - a worksheet", :id => 'lnk-howto-1', 
-      :href => "#{Gutenberg['server']}/front-desk/howto-guides/create_publish_ws.pdf"
-  %li
-    = simple_link :for => "Publish an existing worksheet", :id => 'lnk-howto-2',
-      :href => "#{Gutenberg['server']}/front-desk/howto-guides/publish_ws.pdf"
