Re-worked landing page once again ...
Its more like what we had before. But a little cleaner

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -21,29 +21,66 @@ img {
   } 
 }
 
+#badge {
+  margin-top: 90px ;
+  img { z-index: 900 ; }
+}
+
 #shopfront { 
-  margin-top: 100px ;
+  margin-top: -100px ;
   color: white ;
 
   #carousel { 
     padding-top: 5px ;
   } 
 
-  #steps { 
-    > .row-fluid { 
-      padding-bottom: 8px ;
-      color: $lightgray ;
-      border-bottom: 1px solid $lightgray ;
-      &.active { 
-        color: white ;
-        border-bottom: 4px solid $deep-blue ;
-      }
-    }
-  } 
-
   .row-fluid { 
     padding-bottom: 20px ;
     margin-bottom: 15px ;
+  } 
+
+  .carousel-caption { 
+    color: white ;
+    top: 0px ;
+    min-height: 300px ;
+    background: transparent ; 
+
+    p { 
+      line-height: 19px ;
+      margin-bottom: 10px ;
+      font-size: 14px ;
+      &.title { 
+        font: { 
+          size: 20px ;
+          weight: 500 ;
+        } 
+        line-height: 30px ;
+        border-bottom: 2px solid $deep-blue ;
+      } 
+    } 
+
+    img, .number { 
+      border: 2px solid $deep-blue ; 
+      background: $deep-blue ;
+    }
+
+    img {
+      padding: 5px ;
+      border-radius: 6px ;
+    } 
+
+    .number { 
+      max-width: 45px ;
+      margin-bottom: 15px ;
+      padding: 12px 4px;
+      text-align: center ;
+      vertical-align: middle ;
+      font-size: 25px ;
+      font-weight: 400 ;
+      border-radius: 8px ;
+    } 
+
+
   } 
 } 
 
@@ -798,13 +835,13 @@ button[data-toggle='button'] {
 .jumbotron { 
   margin-bottom: 60px ;
   font : {
-    size: 35px ;
+    size: 30px ;
     family: "Trebuchet MS" ;
     weight: 200 ;
   } 
   color: white ; 
   padding-bottom: 10px ;
-  // border-bottom: 1px dotted $deep-blue ; 
+  border-bottom: 1px dotted $lightgray ; 
 
   a { 
     font : { 
