[landing page]: New image for sample worksheet

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -62,9 +62,10 @@
                           Make Worksheets
                         %p
                           Pick from our database of long-form questions to make worksheets for your students. 
-                          Our database of questions is open. Which means that you can send us questions you 
-                          would like to see and we will include it for you
-                    = image_tag "landing/worksheet.png", :class => 'span6 pull-right'
+                          Our database of questions is open. Which means you can send us questions you 
+                          would like to see and we will include them for you
+
+                    = image_tag "landing/worksheet.png", :class => 'offset7'
 
                   .item{ :id => 'step-2' }
                     .carousel-caption.span6
