[landing-page] Minor edits

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -107,7 +107,7 @@
                           All of our feedback, on all of the questions answered by all of your 
                           students is collected into statistics for you to see. The statistics 
                           will help you identify which students to help with what topics
-                    = image_tag "landing/report.png", :class => 'span6 pull-right'
+                    = image_tag "landing/report.png", :class => 'offset6'
         -#             
           .span2.offset1
             .row-fluid
