[examiner-console]: Corrected specificcation for default link in YAML and HAML

--- a/app/views/menus/admin/_workbench.html.haml
+++ b/app/views/menus/admin/_workbench.html.haml
@@ -6,7 +6,7 @@
     = simple_link :for => 'Pending Work', :icon => 'icon-time'
     %ul.dropdown-menu
       %li
-        = simple_link :for => "Grade Scans", :id => 'lnk-wb-pending', 'default-lnk' => true, :icon => 'icon-pencil'
+        = simple_link :for => "Grade Scans", :id => 'lnk-wb-pending', :icon => 'icon-pencil'
       %li
         = simple_link :for => "Tag Questions", :id => 'lnk-wb-tagging', :icon => 'icon-tag'
       %li
