--- a/app/views/menus/admin/_workbench.html.haml
+++ b/app/views/menus/admin/_workbench.html.haml
@@ -14,6 +14,8 @@
       %li
         = simple_link :for => "Resolve Scans", :id => 'lnk-wb-resolve', :icon => 'icon-search'
   %li
+    = simple_link :for => "Audit Questions", :id => 'lnk-wb-audit', :icon => 'icon-search'
+  %li
     = simple_link :for => "Block DB Slots", :id => 'lnk-wb-blockdb', :icon => 'icon-lock'
   %li
     = simple_link :for => "Receive Scans", :id => 'lnk-wb-receive', :icon => 'icon-download'
