[#108]: Teachers too can now report issues the same way examiners can

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -32,6 +32,7 @@
     = render :partial => 'modals/teacher/demo'
     = render :partial => 'modals/user/ask-a-question'
     = render :partial => 'modals/user/upload-scans'
+    = render :partial => 'modals/examiner/audit'
   #notifications
     = render :partial => 'notifications/teacher/favourited'
     = render :partial => 'notifications/teacher/qzb-no-selection'
