--- a/app/views/menus/teacher/_per-question.html.haml
+++ b/app/views/menus/teacher/_per-question.html.haml
@@ -4,4 +4,4 @@
     = simple_link :for => 'Add to Favourites', :id => 'lnk-like-question', 
     :icon => 'icon-thumbs-up', :remote => true, :url => { :self => "like.json?id=:a" }
   %li
-    = simple_link :for => 'Report issue(s) with solution', :id => 'lnk-incorrect-solution'
+    = simple_link :for => 'Report issue(s)', :id => 'lnk-audit-question', :icon => 'icon-warning-sign'
