[audit]: Allow examiners to audit the official solution during grading ...
KPNS: As of now, its not possible to report the specific subpart
for which the audit report is. The auditor should therefore mention
the subpart explicitly in the comments

--- a/app/views/toolbox/_grd-abacus.html.haml
+++ b/app/views/toolbox/_grd-abacus.html.haml
@@ -4,8 +4,11 @@
 
   .row-fluid.navbar
     .btn-group.pull-right
+
       %button#btn-toggle-answerkey.btn.btn-primary{ :type => :button, 
       'data-toggle' => :button }= "See Solution"
+      %button#btn-audit-key.btn.btn-inverse{ :type => :button}= "Audit Solution" 
+
       %button#btn-submit-fdb.btn.btn-inverse.disabled{ :type => :button, :disabled => :disabled }= "Submit"
 
   .tabbable.tabs-left
