--- a/app/views/modals/examiner/_audit.html.haml
+++ b/app/views/modals/examiner/_audit.html.haml
@@ -1,6 +1,6 @@
 
 - is_teacher = current_account.loggable_type == "Teacher"
-- html = is_teacher ? {} : { :data => { :id => 'tab-audit-review', :action => "#{audit_done_path}?id=:id" } }
+- html = is_teacher ? {} : { :data => { :id => 'tab-audit-review', :action => "#{audit_done_path}?id=:id&gr=0" } }
 
 #m-audit-form.modal.fade.wide
   .row-fluid
