[qzb-filters]: Re-implemented how filters work during quiz building ...
The new scheme relies on class attributes being set on .single-lines
and a [filter] attribute set somewhere up the hierarchy

Currently there are 3 filters - for favourites, selected and show-all.

KPNS: Basis for showing selected questions is wrong

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1253,3 +1253,20 @@ li.split {
     } 
   } 
 } 
+
+#form-qzb { 
+  .btn-group { 
+    .btn { 
+      margin-top: -5px ;
+    } 
+  } 
+
+  .navbar { 
+    margin-bottom: 0px ;
+  } 
+} 
+
+.dropdown-selection { 
+  font-size: 10px ;
+  text-align: center ;
+} 
