--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -18,6 +18,7 @@
     = render :partial => 'menus/teacher/sektions'
     = render :partial => 'menus/teacher/rc' 
     = render :partial => 'menus/teacher/howto' 
+    = render :partial => 'menus/teacher/qzb-filter'
 
     = render :partial => 'menus/user/account'
     = render :partial => 'menus/user/notifications'
