Rationalized / simplified line.write()
The old implementation was hard to read and hence hard to edit - which
in turn limited our ability to add / remove elements to .single-line

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -505,9 +505,9 @@ a {
   } 
 
   .subtext { 
-    font-size: 10px ;
     text-align: right ;
     padding: 0px ;
+    font-weight: 400 ;
   } 
 
   .badge { 
